--- a/app/src/main/res/layout/call_info_view.xml
+++ b/app/src/main/res/layout/call_info_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="16dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="4dp">
 
@@ -56,6 +56,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_sans_bold"
                     android:textAlignment="center"
+                    android:layout_marginBottom="10dp"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     tools:text="Name" />
@@ -73,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nunito_sans_bold"
                     android:textAlignment="center"
+                    android:layout_marginTop="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     tools:text="Number" />
