--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="charcoal_overlay">#2A2D34</color>
+    <color name="red">#fc9d9d</color>
+    <color name="green">#b8f5c1</color>
+
 
 </resources>
